--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-carousel-3d": "^1.0.1",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.2.11",
-    "vue-carousel-3d": "git+https://github.com/CutRay/vue-carousel-3d.git"
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
