--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,10 +11,22 @@
       "src": "./img/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "./img/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "./img/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#2C2738",
-  "theme_color": "#2C2738"
+  "background_color": "#49337D",
+  "theme_color": "#49337D"
 }
