--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "CutO's Portfolio",
-  "short_name": "CutO",
+  "name": "CutRay's Portfolio",
+  "short_name": "CutRay",
   "icons": [
     {
       "src": "./img/icons/icon-192x192.png",
