--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pug-plain-loader": "^1.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
+    "terser-webpack-plugin": "^4.2.3",
     "typescript": "~3.9.3",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
