--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "compilerOptions": { 
+  "compilerOptions": {
+    "forceConsistentCasingInFileNames": false,
     "target": "esnext",
     "module": "esnext",
     "strict": true,
